[package]
name = "tessellate-mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.8", features = ["derive", "env"] }
comrak = "0.19.0"
lettre = { version = "0.11.2", default-features = false, features = [
  "builder",
  "sendmail-transport",
  "serde",
  "tokio1",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
